Added photos and link to map

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <!-- Hero -->
+        <!-- Hero section -->
         <section>
             <ul>
                 <li><a href="">Instagram</a></li>
@@ -48,7 +48,7 @@
         <button type="button">Online-booking</button>
     </section>
     
-        <!-- Prices -->
+        <!-- Prices section-->
         <section id="services">
             <p>Spend your time with the best masters</p>
             <h2>Services and prices</h2>
