--- a/index.html
+++ b/index.html
@@ -26,10 +26,18 @@
     <main>
         <!-- Hero section -->
         <section>
-            <ul>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Youtube</a></li>
-            </ul>
+           <ul>
+        <li>
+          <a href="" rel="noopener noreferrer nofollow" target="_blank"
+            >Youtube</a
+          >
+        </li>
+        <li>
+          <a href="" rel="noopener noreferrer nofollow" target="_blank"
+            >Instagram</a
+          >
+        </li>
+      </ul>
             <p>A hair salon for men in Kyiv</p>
             <h1>BarberShop</h1>
             <p>We are experts in trendy men’s haircuts. <br/>
@@ -52,17 +60,70 @@
         <section id="services">
             <p>Spend your time with the best masters</p>
             <h2>Services and prices</h2>
-            <table></table>
+             <ul>
+          <li>
+            <ul>
+              <li>
+                <p>Men’s haircut</p>
+                <p>from 300 uah.</p>
+              </li>
+              <li>
+                <p>Beard trim</p>
+                <p>from 300 uah.</p>
+              </li>
+              <li>
+                <p>Mustache trim</p>
+                <p>from 300 uah.</p>
+              </li>
+              <li>
+                <p>Straight razor shave</p>
+                <p>from 300 uah.</p>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <ul>
+              <li>
+                <p>Trainee’s haircut</p>
+                <p>from 300 uah.</p>
+              </li>
+              <li>
+                <p>Haircut under the nozzle</p>
+                <p>from 300 uah.</p>
+              </li>
+              <li>
+                <p>Children’s haircut (0-12 y.o.)</p>
+                <p>from 300 uah.</p>
+              </li>
+              <li>
+                <p>Camouflage of gray hair</p>
+                <p>from 300 uah.</p>
+              </li>
+            </ul>
+          </li>
+        </ul>
             <button type="button">Online-booking</button>
         </section>
         <!-- Why -->
         <section>
-            <ul>
-                <li><p><span>600</span><sup>+</sup>Satisfied customers per day</p></li>
-                <li><p><span>50</span><sup>+</sup>Awards for excellent service</p></li>
-                <li><p><span>20</span><sup>+</sup>Kyiv’s best barbers</p></li>
-                <li><p><span>100</span><sup>+</sup>Gifts for regular customers</p></li>
-            </ul>
+             <ul>
+          <li>
+            <span>600</span><sup>+</sup>
+            <p>Satisfied customers per day</p>
+          </li>
+          <li>
+            <span>500</span><sup>+</sup>
+            <p>Satisfied customers per day</p>
+          </li>
+          <li>
+            <span>200</span><sup>+</sup>
+            <p>Satisfied customers per day</p>
+          </li>
+          <li>
+            <span>150</span><sup>+</sup>
+            <p>Satisfied customers per day</p>
+          </li>
+        </ul>
             <p>Old traditional school</p>
             <h2>&#191;Why people come to us?</h2>
             <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times.</p>
@@ -123,7 +184,7 @@
             <address>
                 <ul>
                     <li><a href="https://goo.gl/maps/q8n3kG6KiTCgs2tY7">st. Vasilkovaya, 7A <br/> Kiev, 08132</a></li>
-                    <li><a href="tel:+380441111111"></a>+38 044 111 11 11</li>
+                    <li> <a href="tel:+380441111111">+38 044 111 11 11</a></li>
                     <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                 </ul>
             </address>
@@ -135,9 +196,17 @@
     <footer>
         <p>&copy;Copyright 2020</p>
             <ul>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Youtube</a></li>
-            </ul>
+        <li>
+          <a href="" rel="noopener noreferrer nofollow" target="_blank"
+            >Youtube</a
+          >
+        </li>
+        <li>
+          <a href="" rel="noopener noreferrer nofollow" target="_blank"
+            >Instagram</a
+          >
+        </li>
+      </ul>
     </footer>
 
 </body>
